--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,25 @@
 body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  background-color: back;
+  font-family: "Roboto", sans-serif;
 }
 
 .navbarContainer {
   height: 8vh;
   width: 100vw;
+}
+
+.mainSectionContainer {
+  overflow-y: scroll;
+}
+.mainSectionContainer::-webkit-scrollbar {
+  width: 0.3rem;
+}
+.mainSectionContainer::-webkit-scrollbar-track {
+  background-color: #6b6868;
+  border-radius: 10px;
 }
 
 .mainContainer {
@@ -51,15 +64,82 @@ body {
 }
 .search::-moz-placeholder {
   color: #cfcccc;
-  opacity: 1; /* Firefox */
+  opacity: 1;
 }
 .search::placeholder {
   color: #cfcccc;
-  opacity: 1; /* Firefox */
+  opacity: 1;
 }
 
 .navbar__profile {
   border-radius: 50%;
   background-color: #555;
   padding: 5px;
+}
+
+.meetList__Container {
+  height: 100%;
+  overflow-y: scroll;
+}
+.meetList__Container::-webkit-scrollbar {
+  width: 0.3rem;
+}
+.meetList__Container::-webkit-scrollbar-track {
+  background-color: #6b6868;
+  border-radius: 10px;
+}
+
+.meetItem__profile {
+  width: 40px;
+  border-radius: 50%;
+  font-size: 20px;
+  padding: 5px;
+  background-color: #6e6c6c;
+  margin-right: 5px;
+}
+.meetItem__profile:hover {
+  background-color: #cfcccc;
+}
+
+.leftList__item:hover {
+  color: white;
+  background-color: #a09797;
+  cursor: default;
+}
+
+.menu__Item:hover {
+  background-color: #565252;
+}
+
+@media (max-width: 768px) {
+  /* Styles for screens smaller than 768px */
+  .sidepannelContainer {
+    display: none !important;
+  }
+  .mainSectionContainer {
+    width: 100vw !important;
+  }
+  .meetControlerContainer {
+    font-size: 10px !important;
+  }
+  .transparentBtn {
+    display: none !important;
+  }
+  .meetList__Container {
+    font-size: 12px !important;
+  }
+}
+@media (max-width: 500px) {
+  .meetControlerContainer {
+    font-size: 4px !important;
+  }
+  .meet__controls {
+    font-size: 12px !important;
+  }
+  .mainSectionContainer__top {
+    height: 35vh !important;
+  }
+  .meet__down-arrow {
+    display: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
